# RPA-Web-Service

./: .env  .env_example  .gitignore  README.md  app.py  automacao.py  main.py  pyproject.toml  teste_supabase.py
api/dependencies/: auth.py  repositories.py  use_cases.py
api/middlewares/: observability.py
api/routes/: auth.py  pages.py
app/: main.py
app/auth/: auth_middleware.py  auth_routes.py
app/dto/: auth.py
app/routes/: auth_routes.py  routes.py
app/services/: sector_service.py  transit_fiscal.py  user_service.py
app/use_cases/: authenticate_user.py  execute_pcom_validade_invoices.py  extract_cookies_ibm_login.py  get_sector_metrics.py  get_user_name.py  olpn_pipeline.py  pcom_extract_acertos.py  pending_fiscal_transit.py  register_user.py
application/dto/: auth.py
application/use_cases/: authenticate_user.py  get_sector_metrics.py  register_user.py
backend/extracao_relatorios_ibm/: status_olpn.py
core/: auth.py  database.py  forms.py  middleware.py  models.py
core/config/: settings.py
core/exceptions/: handlers.py
core/logging/: config.py  (+2 more)
docs/: auth.excalidraw  diagrama_score_de_entrega_e_produtividade.excalidraw  logica_negocio_invoices.excalidraw  template_login.excalidraw
jobs/: extract_acertos.py  extract_cookies_ibm_job.py  extract_pending_invoice_transit.py  validate_invoices_pcom.py
settings/: chromium_settings.py  elements_ibm.py  paths.py  pcomm_settings.py  pipe_config.py  pipelines_config.py  regras_pix.py  settings.py
templates/: index.html
tests/: demo.py  teste_invoices.py
utils/: dataframe_utils.py  log.py
(+123 files in other folders)
