[project]
name = "rpa-web-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "playwright>=1.59.0",
    "python-multipart>=0.0.29",
    "selenium>=4.44.0",
    "supabase>=2.30.0",
    "uvicorn>=0.46.0",
]
